--- a/package.json
+++ b/package.json
@@ -94,11 +94,6 @@
     "lib/"
   ],
   "scripts": {
-    "start": "node docbackend.js",
-    "lint": "eslint .",
-    "test": "mocha --require test/support/env --reporter spec --bail --check-leaks test/ test/acceptance/",
-    "test-ci": "nyc --reporter=lcovonly --reporter=text npm test",
-    "test-cov": "nyc --reporter=html --reporter=text npm test",
-    "test-tap": "mocha --require test/support/env --reporter tap --check-leaks test/ test/acceptance/"
+    "start": "node docbackend.js"
   }
 }
